src/k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fakeshop
  namespace: default
spec:
  selector:
    matchLabels:
      app: fakeshop
  template:
    metadata:
      labels:
        app: fakeshop
    spec:
      containers:
        - name: fakeshop
          image: amatildes/fake-shop:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "500m"
              memory: "1024Mi"
            requests:
              cpu: "500m"
              memory: "512Mi"
