src/k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-app
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: fakeshop
  ports:
    - port: 5000
      targetPort: 5000
