src/k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fakeshop-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: fakeshop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-app
                port:
                  number: 5000
